--- a/work12/style.css
+++ b/work12/style.css
@@ -1,8 +1,67 @@
+@media(min-width:576px) {
 .ft{
     font-family: 'Yeseva One', cursive;
     font-size: 50px;
 }
 .hy{
-    height: fit-content;
-    width: 500px ;
+    height: 100%;
+    width: 100%;
+}
+.ff{font-family: 'Righteous', cursive;}
+
+.marginbody{
+    margin-left: 352.5px;
+    margin-right: 352.5px;
+}
+
+.container {
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  text-align: center;
+}
+
+button {
+  background: none;
+  border: none;
+  padding: 40px;
+  font-weight: bold;
+  font-size: 50px;
+  font-family: "Ubuntu", sans-serif;
+  position: relative;
+}
+button:after {
+  transform: translateY(-50%);
+  content: "";
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  z-index: -1;
+  transition: 0.3s ease;
+}
+button:hover:after {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  border-radius: 10px;
+}
+
+
+
+
+
+}
+@media(max-width:998px){
+    .hy{
+        height: 100%;
+        width:100%;
+    }
+    .ff{font-family: 'Righteous', cursive;}
+
 }
