--- a/work12/style.css
+++ b/work12/style.css
@@ -4,7 +4,7 @@
     font-size: 50px;
 }
 .hy{
-    height: 100%;
+    height: 75%;
     width: 100%;
 }
 .ff{font-family: 'Righteous', cursive;}
@@ -13,55 +13,39 @@
     margin-left: 352.5px;
     margin-right: 352.5px;
 }
-
-.container {
-  transform: translate(-50%, -50%);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  text-align: center;
-}
-
-button {
-  background: none;
+.ck{
+  background-color:  hsl(5, 85%, 63%);;
+  color: white;
+  padding: 12px 32px;
+  font-size: 16px;
+  font-weight: 700;
   border: none;
-  padding: 40px;
-  font-weight: bold;
-  font-size: 50px;
-  font-family: "Ubuntu", sans-serif;
-  position: relative;
+  outline: none;
+  text-transform: uppercase;
+  
 }
-button:after {
-  transform: translateY(-50%);
-  content: "";
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: white;
-  position: absolute;
-  left: -20px;
-  top: 50%;
-  z-index: -1;
-  transition: 0.3s ease;
+.ck:hover{
+  background-color:  hsl(240, 100%, 5%);
+  color: white;
+  cursor: pointer;
 }
-button:hover:after {
-  width: 100%;
-  height: 100%;
-  left: 0;
-  border-radius: 10px;
+.ho:hover{
+  color: rgb(241, 125, 29);
+  cursor: pointer;
 }
+#st{
+  color: white;
+  border-bottom: 1px solid hsl(236, 13%, 42%);
+  
 
-
-
-
-
+}
 }
 @media(max-width:998px){
     .hy{
-        height: 100%;
-        width:100%;
+      height: 75%;
+      width: 100%;
     }
     .ff{font-family: 'Righteous', cursive;}
+    
 
 }
