--- a/multipagesite/Css/style.css
+++ b/multipagesite/Css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@1,300&family=Spectral:wght@200&display=swap');
+
 .header {
     width: 100%;
     padding: 0;
@@ -65,7 +67,45 @@
 	margin-top: 22px;
     border-color: #f2745f;
     background-color: #f2745f;
+	
 }
 .navbar-inverse .navbar-toggler:hover, .navbar-inverse .navbar-toggler:focus {
 	background-color: #f2745f;
+}
+.txt1{
+	padding: 180px 0px;
+	background-image: url(../images/banner-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	text-align: center;
+}
+.txt1 h6{
+	color: white;
+	font-family: 'Roboto', sans-serif;
+}
+.txt1 h1{
+	color: white;
+	font-size: 48px;
+	font-family: 'Spectral', serif;
+}
+.txt1 p{
+	color: white;
+	font-size: 14px;
+}
+.txt1 .primary-button {
+	margin-top: 30px;
+	
+}
+.primary-button a {
+	display: inline-block;
+	background-color: #f2745f;
+	color: #fff;
+	font-size: 13px;
+	text-transform: uppercase;
+	font-weight: 500;
+	padding: 12px 20px;
+	border-radius: 3px;
+	text-decoration: none;
+	letter-spacing: 0.5px;
 }
