--- a/multipagesite/Css/style.css
+++ b/multipagesite/Css/style.css
@@ -116,16 +116,24 @@
 }
 .mrg1{
 	margin-top: 25px;
+	padding-bottom: 15px;
+	position: relative;
+	top: 10px;
+
 }
 .bg1{
 	background-color: #f2745f;
 	text-align: center;
+	margin-top: 80px;
+	padding-bottom: 50px;
 }
 .bg2{
 	background-color: #f3826f;
 	text-align: center;
 	margin-left: 20px;
 	margin-right: 20px;
+	position: relative;
+	top: 10px;
 }
 .bor1{
 	margin-top: 15px;
@@ -139,11 +147,52 @@
 	display: inline-block;
 	line-height: 25px;
 	border-radius: 50%;
+	position: relative;
+	top: 10px;
 }
 .btn1{
 	background-color: white;
 	color: #f2745f;
-	font-size: 12px;
+	font-size: 15px;
 	text-transform: uppercase;
+	position: relative;
+	top: 10px;
 }
-
+.cls1{
+	margin-top: 130px;
+	position: relative;
+	left: 206px;
+}
+.cls2{
+	margin-top: 130px;
+	position: relative;
+	right: 204px;
+}
+.cls3{
+	margin-top: 25px;
+	font-size: 13px;
+}
+.cls4{
+	font-size: 25px;
+	margin-top: -10px;
+}
+.cls5{
+margin-top: 100px;
+}
+.cls5 img{
+	border: 10px solid #eaf0ff;
+	border-radius: 50%;
+	position: relative;
+	left: 380px;
+}
+.cls5 h4{
+	text-align: center;
+	position: relative;
+	left: 335px;
+	top: 30px;
+	color: black;
+	font-weight: 300;
+	font-family: 'Spectral', serif;
+}
+.cls5 a{
+	text-decoration: none;}
