--- a/multipagesite/Css/style.css
+++ b/multipagesite/Css/style.css
@@ -178,6 +178,7 @@
 }
 .cls5{
 margin-top: 100px;
+margin-bottom: 100px;
 }
 .cls5 img{
 	border: 10px solid #eaf0ff;
@@ -185,14 +186,95 @@ margin-top: 100px;
 	position: relative;
 	left: 380px;
 }
-.cls5 h4{
+.cls5 p{
 	text-align: center;
 	position: relative;
 	left: 335px;
-	top: 30px;
+	top: 20px;
 	color: black;
-	font-weight: 300;
+	font-weight: 600;
 	font-family: 'Spectral', serif;
+	font-size: 20px;
 }
 .cls5 a{
-	text-decoration: none;}
+	text-decoration: none;
+}
+section#book-table {
+	padding: 80px 0px;
+	background-image: url(../images/book-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	text-align: center;
+}
+
+#book-table .heading h2 {
+	margin-top: 0px;
+	margin-bottom: 70px;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+	color: #fff;
+}
+
+section#book-table .left-image img {
+	width: 100%;
+	overflow: hidden;
+}
+
+.right-info {
+	height: 326.047px;
+	background-color: #fff;
+	margin-left: -30px;
+	padding: 30px;
+}
+
+.right-info h4 {
+	margin-top: 0px;
+	font-family: 'Spectral', serif;
+	font-size: 28px;
+	text-align: center;
+}
+
+.right-info select {
+	border-right: none;
+	border-left: none;
+	border-top: none;
+	width: 100%;
+	outline: none;
+	border-bottom: 1px solid #eee;	
+	font-size: 14px;
+	color: #9a9a9a;
+	padding-left: 10px;
+	height: 40px;
+}
+
+.right-info input {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	box-shadow: none;
+	outline: none;
+	border-right: none;
+	border-left: none;
+	border-top: none;
+	border-bottom: 1px solid #eee;
+	font-size: 14px;
+	color: #9a9a9a;
+}
+
+.right-info button {
+	width: 100%;
+	display: inline-block;
+	background-color: #f2745f;
+	color: #fff!important;
+	font-size: 13px;
+	text-transform: uppercase;
+	font-weight: 500;
+	padding: 12px 20px;
+	border-radius: 3px;
+	text-decoration: none;
+	letter-spacing: 0.5px;
+}
+
+
